# winning-party-predictor

./: .gitignore  CLAUDE.md  INTERVIEW_INVITE.md  README.md  agent.py  build_index.py  embeddings.py  llm.py  metrics.py  pyproject.toml  test.code-workspace  tools.py
.claude/skills/reliable-agent/: SKILL.md
data/: SOURCE.md  cases.json  queries.json
tests/: sample_queries.py
