[project]
name = "winning-party-predictor"
version = "0.1.0"
description = "Interview test: predict the winning party over retrieved precedent"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai>=1.40.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
